{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 91,
  "lineage": "de111933-b33e-a013-bb6e-656edfee6979",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_n8n_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/networkSecurityGroups/nsg-n8n-poc-eus-app",
            "location": "eastus",
            "name": "nsg-n8n-poc-eus-app",
            "resource_group_name": "rgp-n8n-poc-eus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPS",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Resource": "Test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg_n8n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_n8n_private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/networkSecurityGroups/nsg-n8n-poc-eus-pe",
            "location": "eastus",
            "name": "nsg-n8n-poc-eus-pe",
            "resource_group_name": "rgp-n8n-poc-eus",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAppSubnetInbound",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.0.0/22",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Resource": "Test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg_n8n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_n8n_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/22"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "Microsoft.App.environments",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.App/environments"
                  }
                ]
              }
            ],
            "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus/subnets/subnet-n8n-poc-eus-app",
            "name": "subnet-n8n-poc-eus-app",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgp-n8n-poc-eus",
            "virtual_network_name": "vnet-n8n-poc-eus"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg_n8n",
            "azurerm_virtual_network.vnet_n8n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_n8n_private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus/subnets/subnet-n8n-poc-eus-pe",
            "name": "subnet-n8n-poc-eus-pe",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rgp-n8n-poc-eus",
            "virtual_network_name": "vnet-n8n-poc-eus"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg_n8n",
            "azurerm_virtual_network.vnet_n8n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus/subnets/subnet-n8n-poc-eus-app",
            "network_security_group_id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/networkSecurityGroups/nsg-n8n-poc-eus-app",
            "subnet_id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus/subnets/subnet-n8n-poc-eus-app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_n8n_app",
            "azurerm_resource_group.rg_n8n",
            "azurerm_subnet.subnet_n8n_app",
            "azurerm_virtual_network.vnet_n8n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association_private_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus/subnets/subnet-n8n-poc-eus-pe",
            "network_security_group_id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/networkSecurityGroups/nsg-n8n-poc-eus-pe",
            "subnet_id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus/subnets/subnet-n8n-poc-eus-pe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_n8n_private_endpoints",
            "azurerm_resource_group.rg_n8n",
            "azurerm_subnet.subnet_n8n_private_endpoints",
            "azurerm_virtual_network.vnet_n8n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_n8n",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8260d2a1-cb01-4d0c-8f13-09ca303636d8",
            "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus",
            "location": "eastus",
            "name": "vnet-n8n-poc-eus",
            "resource_group_name": "rgp-n8n-poc-eus",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/22"
                ],
                "default_outbound_access_enabled": true,
                "delegation": [
                  {
                    "name": "Microsoft.App.environments",
                    "service_delegation": [
                      {
                        "actions": [
                          "Microsoft.Network/virtualNetworks/subnets/join/action"
                        ],
                        "name": "Microsoft.App/environments"
                      }
                    ]
                  }
                ],
                "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus/subnets/subnet-n8n-poc-eus-app",
                "name": "subnet-n8n-poc-eus-app",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/networkSecurityGroups/nsg-n8n-poc-eus-app"
              },
              {
                "address_prefixes": [
                  "10.0.4.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/virtualNetworks/vnet-n8n-poc-eus/subnets/subnet-n8n-poc-eus-pe",
                "name": "subnet-n8n-poc-eus-pe",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/e968995a-e76b-4fbc-aaab-b176b8a06e0d/resourceGroups/rgp-n8n-poc-eus/providers/Microsoft.Network/networkSecurityGroups/nsg-n8n-poc-eus-pe"
              }
            ],
            "tags": {
              "Resource": "Test"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg_n8n"
          ]
        }
      ]
    }
  ]
}